infra/k8s-prod/ingress-service-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # tls:
  # - hosts:
  #   - albertapp.codes
  #   - www.albertapp.codes
  #   secretName: passmanager-tls
  rules:
    - host: www.albertapp.codes
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-clusterip
              servicePort: 3000
          - path: /api/password/?(.*)
            backend:
              serviceName: password-clusterip
              servicePort: 3000
          - path: /api/query/?(.*)
            backend:
              serviceName: query-clusterip
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-clusterip
              servicePort: 3000
    - host: albertapp.codes
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-clusterip
              servicePort: 3000
          - path: /api/password/?(.*)
            backend:
              serviceName: password-clusterip
              servicePort: 3000
          - path: /api/query/?(.*)
            backend:
              serviceName: query-clusterip
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-clusterip
              servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.albertapp.codes'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    helm.sh/chart: ingress-nginx-2.11.1
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.34.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
